--- a/Pages/Accessories/accessories.html
+++ b/Pages/Accessories/accessories.html
@@ -24,7 +24,7 @@
   <h2 class="title">Accessories</h2>
   <div class="row d-flex justify-content-center">
       <div class="col-4">
-          <a href="#" class="text-decoration-none">
+          <a href="./sub-categories/gaming-headset.html" class="text-decoration-none">
              <img src="./images/image-1.jpg" alt="">
               <h4>Gaming Headset</h4>
           </a>
