--- a/Pages/Accessories/accessories.html
+++ b/Pages/Accessories/accessories.html
@@ -31,7 +31,7 @@
       </div>
 
       <div class="col-4">
-          <a href="#" class="text-decoration-none">
+          <a href="./sub-categories/gaming-mouse.html" class="text-decoration-none">
              <img src="./images/image-2.jpg" alt="">
               <h4>Gaming Mouse</h4>
           </a>
