--- a/Pages/Accessories/sub-categories/gaming-mouse.html
+++ b/Pages/Accessories/sub-categories/gaming-mouse.html
@@ -18,7 +18,7 @@
 </head>
 <body>
   <div class="container-lg m-lg-auto products text-center text-capitalize" >
-    <h2 class="title">Gaming Headset</h2>
+    <h2 class="title">Gaming mouse</h2>
     <div class="right">
       <label for="dropdown">Sort by:</label>
       <select name="dropdown" id="dropdown" >
@@ -36,8 +36,8 @@
         <div class="col-4">
             <a href="#" class="text-decoration-none">
                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                <img src="../images/mouse-1.jpg" >
-                <h4>Sony - INZONE H3 Wired Gaming Headset - White</h4>
+                <img src="../images/mice-1.jpg" >
+                <h4>ROCCAT - Burst Pro Lightweight Wired Optical Gaming Mouse with 16K DPI Owl-Eye Sensor and Titan Wheel - Black</h4>
             </a>
             <div class="rating">
                 <i class="bi bi-star-fill"></i>
@@ -48,8 +48,8 @@
             </div>
             <div class="buy-me d-flex justify-content-between align-items-end ">
                 <div class="price">
-                    <p>$79.99</p>
-                    <p class="save" style="font-size:13px;">Save $20 <span class="text-decoration-line-through" style="font-size:12px;">$99.99</span></p>
+                    <p>$39.99</p>
+                    <p class="save" style="font-size:13px;">Save $20 <span class="text-decoration-line-through" style="font-size:12px;">$59.99</span></p>
                 </div>
                 <div class="cart">
                     <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -60,9 +60,9 @@
         <div class="col-4">
             <a href="#" class="text-decoration-none">
                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                <img src="../images/mouse-2.jpg" >
+                <img src="../images/mice-2.jpg" >
                 <h4>
-                  Razer - Barracuda X Wireless Stereo Gaming Headset for PC, PS4, PS5, Switch, and Android - Blackk</h4>
+                  Logitech - G502 HERO Wired Optical Gaming Mouse with RGB Lighting - Black</h4>
             </a>
             <div class="rating">
                 <i class="bi bi-star-fill"></i>
@@ -73,7 +73,7 @@
             </div>
             <div class="buy-me d-flex justify-content-between align-items-end ">
                 <div class="price">
-                    <p>$49.99<br><span class="save" style="font-size:13px;">Save $50</span> <span class="text-decoration-line-through" style="font-size:12px;">$99.99</span></p>
+                    <p>$29.99<br><span class="save" style="font-size:13px;">Save $20</span> <span class="text-decoration-line-through" style="font-size:12px;">$49.99</span></p>
                 </div>
                 <div class="cart">
                     <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -84,8 +84,8 @@
         <div class="col-4">
             <a href="#" class="text-decoration-none">
                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                <img src="../images/mouse-3.jpg" >
-                <h4>SteelSeries - Arctis 9 Wireless Gaming Headset for PC, PS5, and PS4 - Black</h4>
+                <img src="../images/mice-3.jpg" >
+                <h4>Razer - Basilisk Ultimate Wireless Optical with HyperSpeed Technology and Charging Dock Gaming Mouse - Black</h4>
             </a>
             <div class="rating">
                 <i class="bi bi-star-fill"></i>
@@ -96,7 +96,7 @@
             </div>
             <div class="buy-me d-flex justify-content-between align-items-end ">
                 <div class="price">
-                    <p>$195.99<br><span class="save" style="font-size:13px;">Save $4</span> <span class="text-decoration-line-through" style="font-size:12px;">$199.99</span></p>
+                    <p>$79.99<br><span class="save" style="font-size:13px;">Save $90</span> <span class="text-decoration-line-through" style="font-size:12px;">$169.99</span></p>
                 </div>
                 <div class="cart">
                     <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -106,8 +106,8 @@
         <div class="col-4">
             <a href="#" class="text-decoration-none">
                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                <img src="../images/mouse-4.jpg" >
-                <h4>Razer - Kraken Ultimate Wired THX Spatial Audio Gaming Headset for PC with Chroma RGB Lighting - Classic Black</h4>
+                <img src="../images/mice-4.jpg" >
+                <h4>CORSAIR - CHAMPION SERIES SABRE RGB PRO Lightweight Wireless Optical Gaming Mouse with 79g Ultra-lightweight design - Black</h4>
             </a>
             <div class="rating">
                 <i class="bi bi-star-fill"></i>
@@ -118,7 +118,7 @@
             </div>
             <div class="buy-me d-flex justify-content-between align-items-end ">
                 <div class="price">
-                    <p>$64.99<br><span class="save" style="font-size:13px;">Save $65</span> <span class="text-decoration-line-through" style="font-size:12px;">$129.99</span></p>
+                    <p>$39.99<br><span class="save" style="font-size:13px;">Save $70</span> <span class="text-decoration-line-through" style="font-size:12px;">$109.99</span></p>
                 </div>
                 <div class="cart">
                     <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -131,8 +131,8 @@
         <div class="col-4">
             <a href="#" class="text-decoration-none">
                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                <img src="../images/mouse-5.jpg" >
-                <h4>HyperX - Cloud II Pro Wired 7.1 Surround Sound Gaming Headset for PC, Xbox X|S, Xbox One, PS5, PS4, Nintendo Switch, and Mobile - Red</h4>
+                <img src="../images/mice-5.jpg" >
+                <h4>Logitech - G604 LIGHTSPEED Wireless Optical Gaming Mouse with 25000 DPI HERO sensor - Black</h4>
             </a>
             <div class="rating">
                 <i class="bi bi-star-fill"></i>
@@ -143,7 +143,7 @@
             </div>
             <div class="buy-me d-flex justify-content-between align-items-end ">
                 <div class="price">
-                    <p>$49.99<br><span class="save" style="font-size:13px;">Save $50</span> <span class="text-decoration-line-through" style="font-size:12px;">$99.99</span></p>
+                    <p>$39.99<br><span class="save" style="font-size:13px;">Save $60</span> <span class="text-decoration-line-through" style="font-size:12px;">$99.99</span></p>
                 </div>
                 <div class="cart">
                     <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -154,8 +154,8 @@
         <div class="col-4">
             <a href="#" class="text-decoration-none">
                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                <img src="../images/mouse-6.jpg" >
-                <h4>CORSAIR - VOID RGB ELITE Wireless 7.1 Surround Sound Gaming Headset for PC, PS5, PS4 - Carbon</h4>
+                <img src="../images/mice-6.jpg" >
+                <h4>Razer - Basilisk X Hyperspeed Wireless Optical Gaming Mouse - Black</h4>
             </a>
             <div class="rating">
                 <i class="bi bi-star-fill"></i>
@@ -166,7 +166,7 @@
             </div>
             <div class="buy-me d-flex justify-content-between align-items-end ">
                 <div class="price">
-                    <p>$99.99<br><span class="save" style="font-size:13px;">Save $10</span> <span class="text-decoration-line-through" style="font-size:12px;">$109.99</span></p>
+                    <p>$29.99<br><span class="save" style="font-size:13px;">Save $20</span> <span class="text-decoration-line-through" style="font-size:12px;">$59.99</span></p>
                 </div>
                 <div class="cart">
                     <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -177,8 +177,8 @@
         <div class="col-4">
             <a href="#" class="text-decoration-none">
                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                <img src="../images/mouse-7.jpg" >
-                <h4>Sony - PULSE 3D Wireless Headset for PS5, PS4, and PC - Midnight Blackk</h4>
+                <img src="../images/mice-7.jpg" >
+                <h4>ROCCAT - Burst Pro Air Lightweight Wireless Optical Gaming Ambidextrous Mouse with AIMO Lighting - Black</h4>
             </a>
             <div class="rating">
                 <i class="bi bi-star-fill"></i>
@@ -189,7 +189,7 @@
             </div>
             <div class="buy-me d-flex justify-content-between align-items-end ">
                 <div class="price">
-                    <p>$99.99</p>
+                  <p>$79.99<br><span class="save" style="font-size:13px;">Save $20</span> <span class="text-decoration-line-through" style="font-size:12px;">$99.99</span></p>
                 </div>
                 <div class="cart">
                     <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -200,8 +200,8 @@
         <div class="col-4">
             <a href="#" class="text-decoration-none">
                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                <img src="../images/mouse-8.jpg" >
-                <h4>Turtle Beach - Stealth 700 Gen 2 MAX Wireless Multiplatform Gaming Headset for Xbox, PS5, PS4, Nintendo Switch, PC, 40+ Hour Battery - Cobalt Blue</h4>
+                <img src="../images/mice-8.jpg" >
+                <h4>Logitech - G502 Lightspeed Wireless Optical Gaming Mouse with RGB Lighting - Black</h4>
             </a>
             <div class="rating">
                 <i class="bi bi-star-fill"></i>
@@ -212,7 +212,7 @@
             </div>
             <div class="buy-me d-flex justify-content-between align-items-end ">
                 <div class="price">
-                    <p>$139.99<br><span class="save" style="font-size:13px;">Save $60</span> <span class="text-decoration-line-through" style="font-size:12px;">$199.99</span></p>
+                    <p>$89.99<br><span class="save" style="font-size:13px;">Save $60</span> <span class="text-decoration-line-through" style="font-size:12px;">$149.99</span></p>
                 </div>
                 <div class="cart">
                     <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -225,8 +225,8 @@
       <div class="col-4">
           <a href="#" class="text-decoration-none">
               <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-              <img src="../images/mouse-9.jpg" >
-              <h4>Astro Gaming - A10 Wired Stereo Over-the-Ear Gaming Headset for PC, Xbox, PlayStation, and Nintendo Switch with Flip-to-Mute Mic - Black/Red</h4>
+              <img src="../images/mice-9.jpg" >
+              <h4>Razer - Basilisk V3 Wired Optical Gaming Mouse with Chroma RBG Lighting - Black</h4>
           </a>
           <div class="rating">
               <i class="bi bi-star-fill"></i>
@@ -237,7 +237,7 @@
           </div>
           <div class="buy-me d-flex justify-content-between align-items-end ">
               <div class="price">
-                  <p>$29.99<br><span class="save" style="font-size:13px;">Save $30</span> <span class="text-decoration-line-through" style="font-size:12px;">$59.99</span></p>
+                  <p>$49.99<br><span class="save" style="font-size:13px;">Save $20</span> <span class="text-decoration-line-through" style="font-size:12px;">$69.99</span></p>
               </div>
               <div class="cart">
                   <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -248,8 +248,8 @@
       <div class="col-4">
           <a href="#" class="text-decoration-none">
               <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-              <img src="../images/mouse-10.jpg" >
-              <h4>Turtle Beach - Stealth 600 Gen 2 MAX Wireless Multiplatform Gaming Headset for PC, Xbox X|S, PS5, PS4, Switch - 48 Hour Battery - Black</h4>
+              <img src="../images/mice-10.jpg" >
+              <h4>Razer - DeathAdder V2 Wired Optical Gaming Mouse with 8 Programmable Buttons - Black</h4>
           </a>
           <div class="rating">
               <i class="bi bi-star-fill"></i>
@@ -260,7 +260,7 @@
           </div>
           <div class="buy-me d-flex justify-content-between align-items-end ">
               <div class="price">
-                  <p>$129.99</p>
+                <p>$32.99<br><span class="save" style="font-size:13px;">Save $37</span> <span class="text-decoration-line-through" style="font-size:12px;">$69.99</span></p>
               </div>
               <div class="cart">
                   <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -271,8 +271,8 @@
       <div class="col-4">
           <a href="#" class="text-decoration-none">
               <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-              <img src="../images/mouse-11.jpg" >
-              <h4>Sony - INZONE H9 Wireless Noise Canceling Gaming Headset - White</h4>
+              <img src="../images/mice-11.jpg" >
+              <h4>Razer - Naga Pro Wireless Optical with Interchangeable Side Plates in 2, 6, 12 Button Configurations Gaming Mouse - Black</h4>
           </a>
           <div class="rating">
               <i class="bi bi-star-fill"></i>
@@ -283,7 +283,7 @@
           </div>
           <div class="buy-me d-flex justify-content-between align-items-end ">
               <div class="price">
-                  <p>$279.99<br><span class="save" style="font-size:13px;">Save $20</span> <span class="text-decoration-line-through" style="font-size:12px;">$299.99</span></p>
+                  <p>$84.99<br><span class="save" style="font-size:13px;">Save $65</span> <span class="text-decoration-line-through" style="font-size:12px;">$149.99</span></p>
               </div>
               <div class="cart">
                   <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -294,8 +294,8 @@
       <div class="col-4">
           <a href="#" class="text-decoration-none">
               <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-              <img src="../images/mouse-12.jpg" >
-              <h4>SteelSeries - Arctis 7+ Wireless 7.1 Surround Sound Gaming Headset for PS5, PS4, PC, and Switch - Black</h4>
+              <img src="../images/mice-12.jpg" >
+              <h4>ROCCAT Kone XP Air Wireless Optical Gaming Mouse with Charging Dock and AIMO RGB Lighting - Black</h4>
           </a>
           <div class="rating">
               <i class="bi bi-star-fill"></i>
@@ -306,7 +306,7 @@
           </div>
           <div class="buy-me d-flex justify-content-between align-items-end ">
               <div class="price">
-                  <p>$146.99<br><span class="save" style="font-size:13px;">Save $23</span> <span class="text-decoration-line-through" style="font-size:12px;">$169.99</span></p>
+                  <p>$129.99<br><span class="save" style="font-size:13px;">Save $40</span> <span class="text-decoration-line-through" style="font-size:12px;">$169.99</span></p>
               </div>
               <div class="cart">
                   <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
