--- a/Pages/home.html
+++ b/Pages/home.html
@@ -690,14 +690,14 @@
     integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
     crossorigin="anonymous"></script>
 
-<!---------------- BURGER MENU ON MOBILE ------------->
+<!---------------- BURGER MENU ON MOBILE/TABLET ------------->
 <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
 
 
 <!-- JQUERY FOR STICKY HEADER/NAV  -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.1/jquery.min.js"></script>
-    <script type="text/javascript">
 
+    <script type="text/javascript">
         $(function(){
 
             $(window).scroll(function(){
@@ -711,7 +711,7 @@
             });
 
         });
-        
     </script>
+
 </body>
 </html>
