added home folder for homepage

--- a/Pages/home/home.html
+++ b/Pages/home/home.html
@@ -13,9 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../styles/home.css">
-    <link rel="stylesheet" href="../styles/header.css">
-    <link rel="stylesheet" href="../styles/footer.css">
+    <link rel="stylesheet" href="../home/home.css">
+    <link rel="stylesheet" href="../home/header.css">
+    <link rel="stylesheet" href="../home/footer.css">
 
     <title>Shop and Game</title>
 </head>
@@ -28,7 +28,7 @@
                 <div class="col-6">
                     <div class="logo">
                         <a href="#">
-                            <img src="../images/logo2.png" width="150">
+                            <img src="../home/images/logo2.png" width="150">
                         </a>
                     </div>
                 </div>
@@ -91,7 +91,7 @@
                 </div>
                 <div class="col-6 banner-video">
                     <video autoplay muted loop>
-                        <source src="../video/banner-video.mp4" >
+                        <source src="../home/video/banner-video.mp4" >
                     </video>
                 </div>
             </div>
@@ -139,7 +139,6 @@
                                         <h4>Accessories</h4>
                                     </div>
                                 </div>
-                                
                             </div>
                         </a>
                     </div>
@@ -160,7 +159,7 @@
                         <div class="product-title-star flex-grow-1">
                             <a href="#" class="text-decoration-none">
                                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                                <img src="../images/product-1.jpg" >
+                                <img src="../home/images/product-1.jpg" >
                                 <h4>PNY - NVIDIA GeForce GT 1030 2GB PCI-E 3.0 Graphics Card - Black</h4>
                             </a>
                         </div>
@@ -188,7 +187,7 @@
                         <div class="product-title-star flex-grow-1">
                             <a href="#" class="text-decoration-none">
                                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                                <img src="../images/product-2.jpg" >
+                                <img src="../home/images/product-2.jpg" >
                                 <h4>MSI - NVIDIA GeForce RTX 3060 Ventus 3X 12G OC - 12GB GDDR6 - PCI Express 4.0 - Graphics Card - Black</h4>
                             </a>
                         </div>
@@ -216,7 +215,7 @@
                         <div class="product-title-star flex-grow-1">
                             <a href="#" class="text-decoration-none">
                                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                                <img src="../images/product-3.jpg" >
+                                <img src="../home/images/product-3.jpg" >
                                 <h4>MSI - NVIDIA GeForce GTX 1660 Super Ventus XS OC 6GB GDDR6 PCI Express 3.0 Graphics Card</h4>
                             </a>
                         </div>
@@ -244,7 +243,7 @@
                         <div class="product-title-star flex-grow-1">
                             <a href="#" class="text-decoration-none">
                                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                                <img src="../images/product-4.jpg" >
+                                <img src="../home/images/product-4.jpg" >
                                 <h4>MSI - AMD Radeon RX 6700 XT MECH 2X 12G OC - 12GB GDDR6 - PCI Express 4.0 - Graphics Card - Black</h4>
                             </a>
                         </div>
@@ -283,7 +282,7 @@
                         <div class="product-title-star flex-grow-1">
                             <a href="#" class="text-decoration-none">
                                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                                <img src="../images/product-1.jpg" >
+                                <img src="../home/images/product-1.jpg" >
                                 <h4>PNY - NVIDIA GeForce GT 1030 2GB PCI-E 3.0 Graphics Card - Black</h4>
                             </a>
                         </div>
@@ -311,7 +310,7 @@
                         <div class="product-title-star flex-grow-1">
                             <a href="#" class="text-decoration-none">
                                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                                <img src="../images/product-2.jpg" >
+                                <img src="../home/images/product-2.jpg" >
                                 <h4>MSI - NVIDIA GeForce RTX 3060 Ventus 3X 12G OC - 12GB GDDR6 - PCI Express 4.0 - Graphics Card - Black</h4>
                             </a>
                         </div>
@@ -339,7 +338,7 @@
                         <div class="product-title-star flex-grow-1">
                             <a href="#" class="text-decoration-none">
                                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                                <img src="../images/product-3.jpg" >
+                                <img src="../home/images/product-3.jpg" >
                                 <h4>MSI - NVIDIA GeForce GTX 1660 Super Ventus XS OC 6GB GDDR6 PCI Express 3.0 Graphics Card</h4>
                             </a>
                         </div>
@@ -367,7 +366,7 @@
                         <div class="product-title-star flex-grow-1">
                             <a href="#" class="text-decoration-none">
                                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                                <img src="../images/product-4.jpg" >
+                                <img src="../home/images/product-4.jpg" >
                                 <h4>MSI - AMD Radeon RX 6700 XT MECH 2X 12G OC - 12GB GDDR6 - PCI Express 4.0 - Graphics Card - Black</h4>
                             </a>
                         </div>
@@ -395,7 +394,7 @@
                         <div class="product-title-star flex-grow-1">
                             <a href="#" class="text-decoration-none">
                                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                                <img src="../images/product-4.jpg" >
+                                <img src="../home/images/product-4.jpg" >
                                 <h4>MSI - AMD Radeon RX 6700 XT MECH 2X 12G OC - 12GB GDDR6 - PCI Express 4.0 - Graphics Card - Black</h4>
                             </a>
                         </div>
@@ -423,7 +422,7 @@
                         <div class="product-title-star flex-grow-1">
                             <a href="#" class="text-decoration-none">
                                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                                <img src="../images/product-4.jpg" >
+                                <img src="../home/images/product-4.jpg" >
                                 <h4>MSI - AMD Radeon RX 6700 XT MECH 2X 12G OC - 12GB GDDR6 - PCI Express 4.0 - Graphics Card - Black</h4>
                             </a>
                         </div>
@@ -451,7 +450,7 @@
                         <div class="product-title-star flex-grow-1">
                             <a href="#" class="text-decoration-none">
                                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                                <img src="../images/product-4.jpg" >
+                                <img src="../home/images/product-4.jpg" >
                                 <h4>MSI - AMD Radeon RX 6700 XT MECH 2X 12G OC - 12GB GDDR6 - PCI Express 4.0 - Graphics Card - Black</h4>
                             </a>
                         </div>
@@ -479,7 +478,7 @@
                         <div class="product-title-star flex-grow-1 ">
                             <a href="#" class="text-decoration-none">
                                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
-                                <img src="../images/product-4.jpg" >
+                                <img src="../home/images/product-4.jpg" >
                                 <h4>MSI - AMD Radeon RX 6700 XT MECH 2X 12G OC - 12GB GDDR6 - PCI Express 4.0 - Graphics Card - Black</h4>
                             </a>
                         </div>
@@ -522,13 +521,13 @@
                             data-aos-easing="ease-in-sine">
                             <div class="carousel-inner">
                               <div class="carousel-item active">
-                                <img src="../images/exclusive-1.png" class="d-block w-100"  class="offer-img">
+                                <img src="../home/images/exclusive-1.png" class="d-block w-100"  class="offer-img">
                               </div>
                               <div class="carousel-item">
-                                <img src="../images/exclusive-2.png" class="d-block w-100" class="offer-img">
+                                <img src="../home/images/exclusive-2.png" class="d-block w-100" class="offer-img">
                               </div>
                               <div class="carousel-item">
-                                <img src="../images/exclusive-3.png" class="d-block w-100" class="offer-img">
+                                <img src="../home/images/exclusive-3.png" class="d-block w-100" class="offer-img">
                               </div>
                             </div>
                             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -573,7 +572,7 @@
                             <i class="bi bi-star-fill"></i>
                             <i class="bi bi-star"></i>
                         </div>
-                        <img src="../images/user-1.webp">
+                        <img src="../home/images/user-1.webp">
                         <h3>Katie Sample</h3>
                     </div>
 
@@ -587,7 +586,7 @@
                             <i class="bi bi-star-fill"></i>
                             <i class="bi bi-star-half"></i>
                         </div>
-                        <img src="../images/user-2.webp">
+                        <img src="../home/images/user-2.webp">
                         <h3>Beardman Sample</h3>
                     </div>
 
@@ -601,7 +600,7 @@
                             <i class="bi bi-star-fill"></i>
                             <i class="bi bi-star-fill"></i>
                         </div>
-                        <img src="../images/user-3.webp">
+                        <img src="../home/images/user-3.webp">
                         <h3>Geek Sample</h3>
                     </div>
                 </div>
@@ -614,19 +613,19 @@
             <div class="container-lg">
                 <div class="row d-flex justify-content-around align-items-center">
                     <div class="col-5">
-                        <img src="../images/brand-1.png">
+                        <img src="../home/images/brand-1.png">
                     </div>
                     <div class="col-5">
-                        <img src="../images/brand-2.png">
+                        <img src="../home/images/brand-2.png">
                     </div>
                     <div class="col-5">
-                        <img src="../images/brand-3.png">
+                        <img src="../home/images/brand-3.png">
                     </div>
                     <div class="col-5">
-                        <img src="../images/brand-4.png">
+                        <img src="../home/images/brand-4.png">
                     </div>
                     <div class="col-5">
-                        <img src="../images/brand-5.png">
+                        <img src="../home/images/brand-5.png">
                     </div>
                 </div>
             </div>
@@ -637,7 +636,7 @@
         <footer class="container-lg">
             <div class="row d-flex justify-content-center align-items-start pt-4 ">
                 <div class="col-3">
-                    <img src="../images/logo-white2.png" class="mb-3">
+                    <img src="../home/images/logo-white2.png" class="mb-3">
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, deserunt.</p>
                 </div>
                 <div class="col-3">
