added the correct link

--- a/Pages/home/home.html
+++ b/Pages/home/home.html
@@ -47,7 +47,7 @@
                                     Products
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-dark">
-                                    <li><a href="./Accessories/accessories.html" class="dropdown-item">Accessories</a></li>
+                                    <li><a href="../Accessories/accessories.html" class="dropdown-item">Accessories</a></li>
                                     <li><a href="#" class="dropdown-item">Cards and Components</a></li>
                                     <li><a href="#" class="dropdown-item">Desktops</a></li>
                                 </ul>
