added a styles folder

--- a/Pages/home/home.html
+++ b/Pages/home/home.html
@@ -13,9 +13,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="../home/home.css">
-    <link rel="stylesheet" href="../home/header.css">
-    <link rel="stylesheet" href="../home/footer.css">
+    <link rel="stylesheet" href="../home/styles/home.css">
+    <link rel="stylesheet" href="../home/styles/header.css">
+    <link rel="stylesheet" href="../home/styles/footer.css">
 
     <title>Shop and Game</title>
 </head>
