added bg gradient on product items and changed the relative path for the bg images

--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -104,7 +104,7 @@
     <section class="section-2">
         <div class="categories">
             <div class="container-lg m-lg-auto">
-                <div class="row d-flex justify-content-center">
+                <div class="row d-flex justify-content-around">
                     <h2 class="title" >Categories</h2>
                     <div class="col-3">
                         <h4 class="vanishing-featured-title text-center"><span class="text-muted px-1">Computer </span>Cards <i class="bi bi-cpu text-white px-2"></i></h4>
@@ -268,7 +268,7 @@
                     </div>
                 </div> 
 
-                <div class="d-flex justify-content-lg-end ">
+                <div class="d-flex justify-content-lg-end view-more-btn">
                     <a href="#" class="btn text-center">View More Products <i class="bi bi-arrow-right"></i></a>
                 </div>
             </div>
@@ -502,7 +502,7 @@
                         </div>  
                     </div>
                 </div> 
-                <div class="d-flex justify-content-end">
+                <div class="d-flex justify-content-end view-more-btn">
                     <a href="#" class="btn">View More Products <i class="bi bi-arrow-right"></i></a>
                 </div>
             </div>
@@ -636,7 +636,9 @@
         <footer class="container-lg">
             <div class="row d-flex justify-content-center align-items-start pt-4 ">
                 <div class="col-3">
-                    <img src="../home/images/logo-white2.png" class="mb-3">
+                    <a href="#">
+                        <img src="../home/images/logo-white2.png" class="mb-3">
+                    </a>
                     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, deserunt.</p>
                 </div>
                 <div class="col-3">
