changed look of accessories

--- a/Pages/home.html
+++ b/Pages/home.html
@@ -39,7 +39,7 @@
                               Products
                             </a>
                             <ul class="dropdown-menu dropdown-menu-dark products-dropdown">
-                              <li><a class="dropdown-item" href="./Accessories/accessories.html">Accessories</a></li>
+                              <li><a class="dropdown-item" href="./Accessories/mainpage.html">Accessories</a></li>
                               <li><a class="dropdown-item" href="#">Cards and Components</a></li>
                               <li><a class="dropdown-item" href="#">Deskstops Builds</a></li>
                             </ul>
