--- a/Pages/Accessories/mainpage.html
+++ b/Pages/Accessories/mainpage.html
@@ -34,7 +34,7 @@
 
         <div class="col-4 d-flex flex-column">
             <div class="product-title-star flex-grow-1">
-                <a href="#" class="text-decoration-none">
+                <a href="../Accessories/sub-categories/gaming-mouse.html" class="text-decoration-none">
                     <img src="./images/image-2.jpg" >
                     <h4>Gaming mice</h4>
                 </a>
