--- a/Pages/Accessories/mainpage.html
+++ b/Pages/Accessories/mainpage.html
@@ -43,7 +43,7 @@
 
         <div class="col-4 d-flex flex-column">
             <div class="product-title-star flex-grow-1">
-                <a href="#" class="text-decoration-none">
+                <a href="../Accessories/sub-categories/keyboard.html" class="text-decoration-none">
                     <img src="./images/image-3.jpg" >
                     <h4><h4>Gaming Keyboard</h4></h4>
                 </a>
