edit  the price of products

--- a/pages/Accessories/sub-categories/gaming-headset.html
+++ b/pages/Accessories/sub-categories/gaming-headset.html
@@ -17,7 +17,6 @@
 <link rel="stylesheet" href="../styles/sub.css">
 </head>
 <body>
-    <!-- HEADER -->
 <!-- Header -->
 <header class="header">
     <div class="container-lg align-items-center justify-content-between flex-wrap">
@@ -75,7 +74,7 @@
             </div>
         </div>
     </div>
-</heade>
+</header>
     <!-- HEADER END -->
 <!-- Gaming Headset -->
 <div class="container-lg m-lg-auto products ">
@@ -309,7 +308,7 @@
 
                 <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                     <div class="price mt-2">
-                        <p>$349.99<br><span class="save" style="font-size:13px;">Save $40</span> <span class="text-decoration-line-through" style="font-size:12px;">$389.99</span></p>
+                        <p>$99.99<br><span class="save" style="font-size:13px;">Save $10</span> <span class="text-decoration-line-through" style="font-size:12px;">$109.99</span></p>
                     </div>
                     <div class="cart mt-2">
                         <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -336,7 +335,7 @@
 
               <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                   <div class="price mt-2">
-                      <p>$14.99<br><span class="save" style="font-size:13px;">Save $45</span> <span class="text-decoration-line-through" style="font-size:12px;">$59.99</span></p>
+                      <p>$29.99<br><span class="save" style="font-size:13px;">Save $30</span> <span class="text-decoration-line-through" style="font-size:12px;">$59.99</span></p>
                   </div>
                   <div class="cart mt-2">
                       <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -364,7 +363,7 @@
 
               <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                   <div class="price mt-2">
-                      <p>$349.99<br><span class="save" style="font-size:13px;">Save $40</span> <span class="text-decoration-line-through" style="font-size:12px;">$389.99</span></p>
+                      <p>$39.99<br><span class="save" style="font-size:13px;">Save $30</span> <span class="text-decoration-line-through" style="font-size:12px;">$69.99</span></p>
                   </div>
                   <div class="cart mt-2">
                       <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -420,7 +419,7 @@
 
               <div class="buy-me d-flex justify-content-between align-items-end flex-wrap">
                   <div class="price mt-2">
-                      <p>$349.99<br><span class="save" style="font-size:13px;">Save $40</span> <span class="text-decoration-line-through" style="font-size:12px;">$389.99</span></p>
+                      <p>$99.99</p>
                   </div>
                   <div class="cart mt-2">
                       <a href="#" class="text-decoration-none">Add to Cart <i class="bi bi-cart"></i></a>
@@ -440,6 +439,7 @@
       <a href="#">&raquo;</a>
     </div>
 </div>
+<hr>
  <!-- ------------------------ TESTIMONIAL ---------------------- -->
 
 <div class="testimonial">
@@ -522,7 +522,7 @@
                 <div class="row d-flex justify-content-center align-items-start pt-4 ">
                     <div class="col-3">
                         <a href="#">
-                            <img src="../home/images/logo-white2.png" class="mb-3">
+                            <img src="../images/logo-white2.png" class="mb-3">
                         </a>
                         <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error, deserunt.</p>
                     </div>
