--- a/pages/home/home.html
+++ b/pages/home/home.html
@@ -157,7 +157,7 @@
                     data-aos-offset="100">
                     <div class="col-4 d-flex flex-column">
                         <div class="product-title-star flex-grow-1">
-                            <a href="#" class="text-decoration-none">
+                            <a href="../products/product-1.html" class="text-decoration-none">
                                 <p><i class="bi bi-suit-heart"></i> <span class="wishlist">Add to your wish list</span></p>
                                 <img src="../home/images/product-1.jpg" >
                                 <h4>PNY - NVIDIA GeForce GT 1030 2GB PCI-E 3.0 Graphics Card - Black</h4>
