--- a/pages/products/product-1.html
+++ b/pages/products/product-1.html
@@ -19,7 +19,7 @@
     <link rel="stylesheet" href="../products/styles/header.css">
     <link rel="stylesheet" href="../products/styles/footer.css">
 
-    <title>Central Processing Unit - Computer Cards and Components - Shop and Game</title>
+    <title>PNY - NVIDIA GeForce GT 1030 2GB PCI-E 3.0 Graphics Card - Black - Shop and Game</title>
 </head>
 
 <body>
