--- a/pages/products/product-1.html
+++ b/pages/products/product-1.html
@@ -158,7 +158,7 @@
                                     Accelerate your entire PC experience with the fast, powerful NVIDIA GeForce GT 1030
                                     graphics card. Its award-winning NVIDIA Pascal architecture, powerful graphics
                                     engine, and state-of-the-art technologies give you the performance upgrade you need
-                                    to drive today’s most demanding PC applications. Unleash your creativity with
+                                    to drive today's most demanding PC applications. Unleash your creativity with
                                     stunning HD video and picture editing and enjoy incredible gaming. Now, you can do
                                     it all. You can even get easy driver updates and one-click game optimization with
                                     GeForce Experience<br><br>
@@ -289,7 +289,7 @@
                                                     </p>
                                                 </div>
                                                 <div class="col-6">
-                                                    <p>Fan</p>
+                                                    <p>2.7 inches</p>
                                                 </div>
                                             </div>
                                             <div class="specification-col-rows d-flex">
@@ -298,7 +298,7 @@
                                                     </p>
                                                 </div>
                                                 <div class="col-6">
-                                                    <p>2.7 inches</p>
+                                                    <p>Fan</p>
                                                 </div>
                                             </div>
                                             <div class="specification-col-rows d-flex">
